--- a/Averaging.ipynb
+++ b/Averaging.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Averaging.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyONfplKxdbNYSKHYxFYMQ3A",
+      "authorship_tag": "ABX9TyPKQvHlnpQISx4vZ5sF8NUP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,11 +49,11 @@
       "metadata": {
         "id": "s87QSjApzAbq",
         "colab_type": "code",
+        "outputId": "181662fe-58e2-4e01-f430-6b7cd91177d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 260
-        },
-        "outputId": "3b41405a-c69e-4c98-ca97-05a68a5d55d3"
+        }
       },
       "source": [
         "iris = datasets.load_iris()\n",
@@ -61,7 +61,7 @@
         "Y = iris.target\n",
         "print(X)"
       ],
-      "execution_count": 4,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,11 +90,11 @@
       "metadata": {
         "id": "tvto2ZlVzEGX",
         "colab_type": "code",
+        "outputId": "11242d09-7d0f-48dd-9b09-b66d0e337d0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "52948888-ada1-4bac-df26-b70954be7bb8"
+        }
       },
       "source": [
         "# Remove correlated columns\n",
@@ -106,7 +106,7 @@
         "correlated_cols = [col for col in corr_df if any(corr_df[col] > 0.75)]\n",
         "print(correlated_cols)"
       ],
-      "execution_count": 5,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,17 +122,17 @@
       "metadata": {
         "id": "EOzoAS-9zeIR",
         "colab_type": "code",
+        "outputId": "0026b247-f6c2-495e-e0c0-39e64a21cd45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "306c1bea-18ac-4371-9016-08ec4ecdaeab"
+        }
       },
       "source": [
         "X.drop(correlated_cols, axis=1, inplace=True)\n",
         "print(X.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,26 +148,14 @@
       "metadata": {
         "id": "4nlt8z_NzlG_",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "f9903898-648f-4f6e-ac91-604e691c9b87"
+        "colab": {}
       },
       "source": [
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2)"
+        "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+        "                                    X, Y, test_size=0.2)"
       ],
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(120, 2)\n",
-            "(30, 2)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -188,17 +176,17 @@
       "metadata": {
         "id": "inulLX3KSMl5",
         "colab_type": "code",
+        "outputId": "febc2051-97ea-48ea-aad8-2e28649a18c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        },
-        "outputId": "e43691a5-dc07-4fca-b6f7-bffbf7303b4a"
+        }
       },
       "source": [
         "model1.fit(X_train, Y_train)\n",
         "model2.fit(X_train, Y_train)"
       ],
-      "execution_count": 35,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +200,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 62
         }
       ]
     },
@@ -235,27 +223,29 @@
       "metadata": {
         "id": "1pzVje6hUyz0",
         "colab_type": "code",
+        "outputId": "dd4cfd75-4a75-4b3a-d41f-78e8d3bae2f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "be888377-4dfd-47b1-dc15-4e19e3c62252"
+        }
       },
       "source": [
-        "print(\"Model1 mean_squared_error:\", mean_squared_error(Y_test, pred1))\n",
-        "print(\"Model2 mean_squared_error:\", mean_squared_error(Y_test, pred2))\n",
-        "print(\"Model1 r2_score:\", r2_score(Y_test, pred1))\n",
+        "print(\"Model1 mean_squared_error:\",\n",
+        "        mean_squared_error(Y_test, pred1))\n",
+        "print(\"Model2 mean_squared_error:\",\n",
+        "      mean_squared_error(Y_test, pred2))\n",
+        "print(\"Model1 r2_score:\",r2_score(Y_test, pred1))\n",
         "print(\"Model2 r2_score:\", r2_score(Y_test, pred2))"
       ],
-      "execution_count": 53,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model1 mean_squared_error: 0.18133032773112684\n",
-            "Model2 mean_squared_error: 0.12666666666666668\n",
-            "Model1 r2_score: 0.7280045084033098\n",
-            "Model2 r2_score: 0.81\n"
+            "Model1 mean_squared_error: 0.1777139566496869\n",
+            "Model2 mean_squared_error: 0.15333333333333332\n",
+            "Model1 r2_score: 0.6807533712879876\n",
+            "Model2 r2_score: 0.7245508982035929\n"
           ],
           "name": "stdout"
         }
@@ -289,23 +279,24 @@
       "metadata": {
         "id": "_0g1Z1lRUkjo",
         "colab_type": "code",
+        "outputId": "588cacaa-02d6-446d-b97f-bf59b7f8a4c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "c525763b-343a-4872-9cd5-164108c2b7a3"
+        }
       },
       "source": [
-        "print(\"mean_squared_error:\", mean_squared_error(Y_test, pred))\n",
+        "print(\"mean_squared_error:\",\n",
+        "      mean_squared_error(Y_test, pred))\n",
         "print(\"r2_score:\", r2_score(Y_test, pred))"
       ],
-      "execution_count": 55,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "mean_squared_error: 0.13252767579124675\n",
-            "r2_score: 0.8012084863131299\n"
+            "mean_squared_error: 0.14921995730097123\n",
+            "r2_score: 0.7319401964653212\n"
           ],
           "name": "stdout"
         }
