--- a/Blending.ipynb
+++ b/Blending.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Blending.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDMMZ6fbAb8JCiMMSpL5WE",
+      "authorship_tag": "ABX9TyOMewVCTXRreJNhdrZoNhUu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,13 +52,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "ed51b4ff-2d81-4886-9344-676fc170d2f3"
+        "outputId": "6e2818df-5c70-47bf-a974-3063db7f8cbd"
       },
       "source": [
         "iris = load_iris()\n",
         "print(iris.feature_names)"
       ],
-      "execution_count": 220,
+      "execution_count": 236,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,14 +74,95 @@
       "metadata": {
         "id": "3I1gEDPx5Plj",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "bf6cc5c0-be12-498e-d811-e1a535d173c5"
       },
       "source": [
         "X = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
-        "Y = iris.target"
+        "Y = iris.target\n",
+        "print(X.head())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 237,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+            "0                5.1               3.5                1.4               0.2\n",
+            "1                4.9               3.0                1.4               0.2\n",
+            "2                4.7               3.2                1.3               0.2\n",
+            "3                4.6               3.1                1.5               0.2\n",
+            "4                5.0               3.6                1.4               0.2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UOG9Uxl8_PbR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ad63f683-2645-4f0a-dd05-41d24174490c"
+      },
+      "source": [
+        "# Remove correlated columns\n",
+        "corr_df = X.corr().abs()\n",
+        "up_tri = np.triu(\n",
+        "\tnp.full(corr_df.shape, 1), k=1)\n",
+        "up_tri = up_tri.astype(bool)\n",
+        "corr_df = corr_df.where(up_tri)\n",
+        "correlated_cols = [col for col in corr_df if any(corr_df[col] > 0.75)]\n",
+        "print(correlated_cols)"
+      ],
+      "execution_count": 238,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['petal length (cm)', 'petal width (cm)']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MY4SCMoz_VZw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "c0e6b1ad-d2ea-4a36-eb1f-df7f47025200"
+      },
+      "source": [
+        "X.drop(correlated_cols, axis=1, inplace=True)\n",
+        "print(X.head())"
+      ],
+      "execution_count": 239,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "   sepal length (cm)  sepal width (cm)\n",
+            "0                5.1               3.5\n",
+            "1                4.9               3.0\n",
+            "2                4.7               3.2\n",
+            "3                4.6               3.1\n",
+            "4                5.0               3.6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -134,7 +215,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "c4184e3d-14bb-428a-8b5f-bf753626f9a2"
+        "outputId": "fd03f321-6d6b-4b9c-841e-42dcbc99d9d9"
       },
       "source": [
         "model1.fit(X_train, Y_train)\n",
@@ -146,13 +227,13 @@
         "print(r2_score(test_pred1, Y_test))\n",
         "print(r2_score(test_pred2, Y_test))"
       ],
-      "execution_count": 225,
+      "execution_count": 243,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.968679249240955\n",
-            "0.9391177046801931\n"
+            "0.4591994811593182\n",
+            "0.5625685756995965\n"
           ],
           "name": "stdout"
         }
@@ -194,12 +275,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "56cc67e9-dbc6-47e2-9858-f1fdbd30548b"
+        "outputId": "045c9860-e381-4bbc-d77d-12f57383a830"
       },
       "source": [
         "meta_model.fit(val_pred, Y_val)"
       ],
-      "execution_count": 228,
+      "execution_count": 246,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +292,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 228
+          "execution_count": 246
         }
       ]
     },
@@ -237,24 +318,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "7c32bc02-3e68-41c5-f01a-ff214cc0e66b"
+        "outputId": "fa1f304a-68f9-4501-c9ba-a5e79a8353c8"
       },
       "source": [
         "r2_score(blending_pred, Y_test)"
       ],
-      "execution_count": 230,
+      "execution_count": 248,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9638839226084526"
+              "0.6650353944696372"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 230
+          "execution_count": 248
         }
       ]
     }
