--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -34,10 +34,12 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "from sklearn.datasets import load_iris\n",
-        "from sklearn.ensemble import RandomForestRegressor\n",
-        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import r2_score"
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "from sklearn.metrics import accuracy_score"
       ],
       "execution_count": 0,
       "outputs": []
@@ -47,7 +49,7 @@
       "metadata": {
         "id": "-nxnzX3m5JUE",
         "colab_type": "code",
-        "outputId": "6e2818df-5c70-47bf-a974-3063db7f8cbd",
+        "outputId": "5d015cb9-3f35-4de0-ee1a-101663262f10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -57,7 +59,7 @@
         "iris = load_iris()\n",
         "print(iris.feature_names)"
       ],
-      "execution_count": 0,
+      "execution_count": 300,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +75,7 @@
       "metadata": {
         "id": "3I1gEDPx5Plj",
         "colab_type": "code",
-        "outputId": "bf6cc5c0-be12-498e-d811-e1a535d173c5",
+        "outputId": "c0edff96-efe6-495e-802c-1bfd35e07f5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -84,7 +86,7 @@
         "Y = iris.target\n",
         "print(X.head())"
       ],
-      "execution_count": 0,
+      "execution_count": 301,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +107,7 @@
       "metadata": {
         "id": "UOG9Uxl8_PbR",
         "colab_type": "code",
-        "outputId": "ad63f683-2645-4f0a-dd05-41d24174490c",
+        "outputId": "8d8aa857-f52f-48fa-efe9-095624a3e7fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -121,7 +123,7 @@
         "correlated_cols = [col for col in corr_df if any(corr_df[col] > 0.75)]\n",
         "print(correlated_cols)"
       ],
-      "execution_count": 0,
+      "execution_count": 302,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +139,7 @@
       "metadata": {
         "id": "MY4SCMoz_VZw",
         "colab_type": "code",
-        "outputId": "c0e6b1ad-d2ea-4a36-eb1f-df7f47025200",
+        "outputId": "6ff2ab21-7539-4363-dd69-b1ac70229559",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -147,7 +149,7 @@
         "X.drop(correlated_cols, axis=1, inplace=True)\n",
         "print(X.head())"
       ],
-      "execution_count": 0,
+      "execution_count": 303,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,13 +182,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iNksg1ci7S11",
+        "id": "xuz1TFQzAlyQ",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "X_train, X_val, Y_train, Y_val = train_test_split(\n",
-        "                                    X_train, Y_train, test_size=0.5)"
+        "def stacking(model, n_folds, X_train, X_test):\n",
+        "    sFold = StratifiedKFold(n_folds)\n",
+        "    val_preds = list()\n",
+        "    Y_reindexed = list()\n",
+        "    for train_idx, val_idx in sFold.split(X_train, Y_train):\n",
+        "        X_fold = X_train.iloc[train_idx]\n",
+        "        Y_fold = Y_train[train_idx]\n",
+        "        X_val = X_train.iloc[val_idx]\n",
+        "        Y_val = Y_train[val_idx]\n",
+        "        model.fit(X_fold, Y_fold)\n",
+        "        val_preds.extend(model.predict(X_val))\n",
+        "        Y_reindexed.extend(Y_val)\n",
+        "\n",
+        "    test_pred = model.predict(X_test)\n",
+        "    val_preds = np.array(val_preds).reshape(-1, 1)\n",
+        "\n",
+        "    return val_preds, test_pred, Y_reindexed"
       ],
       "execution_count": 0,
       "outputs": []
@@ -194,13 +211,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TCx6Ea6V7kYd",
+        "id": "5FxLBAp_DQtc",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "model1 = RandomForestRegressor()\n",
-        "model2 = LinearRegression()"
+        "model1 = DecisionTreeClassifier()\n",
+        "val_pred1, test_pred1, Y_reindexed = stacking(\n",
+        "                        model1, 5, X_train, X_test)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -208,133 +226,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oYQc2I8G7pD0",
+        "id": "T_EO4DiUDw9S",
         "colab_type": "code",
-        "outputId": "fd03f321-6d6b-4b9c-841e-42dcbc99d9d9",
+        "colab": {}
+      },
+      "source": [
+        "model2 = KNeighborsClassifier()\n",
+        "val_pred2, test_pred2, Y_reindexed = stacking(\n",
+        "                        model2, 5, X_train, X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CBLjlyRcEI52",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "val_pred = np.column_stack([val_pred1, val_pred2])\n",
+        "test_pred = np.column_stack([test_pred1, test_pred2])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hYFy3iRpNyuU",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
+          "height": 35
+        },
+        "outputId": "4b470fdc-941c-4de3-9ac9-3e6709b7036f"
       },
       "source": [
-        "model1.fit(X_train, Y_train)\n",
-        "model2.fit(X_train, Y_train)\n",
-        "val_pred1 = model1.predict(X_val)\n",
-        "val_pred2 = model2.predict(X_val)\n",
-        "test_pred1 = model1.predict(X_test)\n",
-        "test_pred2 = model2.predict(X_test)\n",
-        "print(r2_score(test_pred1, Y_test))\n",
-        "print(r2_score(test_pred2, Y_test))"
+        "meta_model = LogisticRegression()\n",
+        "meta_model.fit(val_pred, Y_reindexed)\n",
+        "stacking_pred = meta_model.predict(test_pred)\n",
+        "print(accuracy_score(stacking_pred, Y_test))"
       ],
-      "execution_count": 0,
+      "execution_count": 309,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.4591994811593182\n",
-            "0.5625685756995965\n"
+            "0.8\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sKsdgSAc8MeF",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "val_pred = np.column_stack((val_pred1, val_pred2))\n",
-        "test_pred = np.column_stack((test_pred1, test_pred2))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_hk9KFDc8Awl",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "meta_model = LinearRegression()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4rPuE0x28FhE",
-        "colab_type": "code",
-        "outputId": "045c9860-e381-4bbc-d77d-12f57383a830",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "meta_model.fit(val_pred, Y_val)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 246
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CYZvCgoM89FX",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "blending_pred = meta_model.predict(test_pred)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "i67vCnNu9Scj",
-        "colab_type": "code",
-        "outputId": "fa1f304a-68f9-4501-c9ba-a5e79a8353c8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "r2_score(blending_pred, Y_test)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.6650353944696372"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 248
         }
       ]
     }
